<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="240dp"
        android:onClick="searchForItem"
        android:text="@string/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:layout_constraintVertical_bias="0.598" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="settingsButton"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toEndOf="@+id/greeting"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <RadioGroup
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/searchByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchByName" />

        <RadioButton
            android:id="@+id/searchByIngridient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchByIngredient" />

        <RadioButton
            android:id="@+id/random"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/random" />

        <RadioButton
            android:id="@+id/showAllIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showAllIngredients" />

        <RadioButton
            android:id="@+id/showAllDrinks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/showAllDrinks" />
    </RadioGroup>

    <TextView
        android:id="@+id/results"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:text="@string/results"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/searchText"
        app:layout_constraintTop_toBottomOf="@+id/searchText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/searchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/searchText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchButton" />

    <Button
        android:id="@+id/counterButton"
        android:layout_width="94dp"
        android:layout_height="56dp"
        android:layout_marginEnd="5dp"
        android:onClick="counterButton"
        android:text="@string/buttonCounter"
        app:layout_constraintBottom_toBottomOf="@+id/greeting"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/greeting"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

</androidx.constraintlayout.widget.ConstraintLayout>